# CarDodgingGym

./: .gitignore  README.md  TODO.md  convert_onnx_to_tf.py  index.html  ppo_cargame.onnx  pyproject.toml  vecnormalize_stats.json
assets/js/: game.js  main.js  normalizer.js
car_game/: __init__.py  export_onnx.py  run.py
car_game/envs/: __init__.py  car_game_env.py
car_game/logs/eval_results/: evaluations.npz
car_game/logs/ppo_cargame_tensorboard/PPO_1/: events.out.tfevents.1762970421.624cd1db430e.10576.0
car_game/models/: vecnormalize_stats.pkl
car_game/wrappers/: __init__.py
