[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["car_game"]

[project]
name = "car_game_rl"
version = "0.0.1"
authors = [
  { name = "Jonathan Coletti", email = "jonathancoletti0@gmail.com" }
]
dependencies = [
  "gymnasium==1.2.1",
  "pygame==2.6.1",
  "pre-commit==4.3.0",
  "stable-baselines3[extra]==2.7.0",
  "tensorboard==2.20.0",
  "onnx==1.19.1",
  "onnxruntime==1.23.1",
  "onnxscript==0.5.3",
]
